# mineracao-de-dados

./: CMakeLists.txt  README.md  notas.md
src/: CMakeLists.txt  randomforest.cpp  svm.cpp
